--- a/package.json
+++ b/package.json
@@ -12,13 +12,11 @@
   "dependencies": {
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
-    "immer": "^10.0.2",
     "next": "13.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "styled-components": "^5.3.9",
-    "swr": "^2.1.5",
-    "use-local-storage-state": "^18.3.2"
+    "zustand": "^4.3.8"
   },
   "devDependencies": {
     "@svgr/webpack": "^7.0.0",
