--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
     "test": "jest --watchAll"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
+    "fast-deep-equal": "^3.1.3",
     "next": "13.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
     "styled-components": "^5.3.9",
     "swr": "^2.1.5",
     "use-local-storage-state": "^18.3.2"
